openshift-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-flask-app-route
spec:
  to:
    kind: Service
    name: my-flask-app
  port:
    targetPort: 80
  wildcardPolicy: None
